# CMake_Project_Template

./: CMakeLists.txt  example.cpp  example.hpp  main.cpp
TESTS/: CMakeLists.txt  sprTest1.cpp
